Game mode respawning, AI fixes

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -175,8 +175,8 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
-StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 ArrayProperty=
 IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
@@ -193,6 +193,10 @@ LuminRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 MagicLeapSDKSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
 MagicLeapEmulatorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
 MagicLeapSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
+TopDownGameMode_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+CheckPlayerDead_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+CheckTargetDead_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+MoveToPlayer_C=
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -216,7 +220,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/Levels/MechanicsLevel
@@ -226,6 +230,9 @@ CleanShutdown=True
 OpenAssetsAtExit=/Game/SpawnActor/SpawnPoint.SpawnPoint
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
+OpenAssetsAtExit=/Game/AIAgent/AIbot.AIbot
+OpenAssetsAtExit=/Game/AIAgent/MoveToPlayer.MoveToPlayer
+OpenAssetsAtExit=/Game/AIAgent/Perception.Perception
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2168,11 +2175,19 @@ MagicLeapSDKSettings.SDK Config=True
 MagicLeapEmulatorSettings.MagicLeapEmulator=True
 MagicLeapSettings.General=True
 WorldSettings.Broadphase=True
+CheckPlayerDead_C.Description=True
+CheckPlayerDead_C.Task=True
+CheckPlayerDead_New_C.Default=True
+CheckPlayerDead_New_C.Description=True
+CheckPlayerDead_New_C.Task=True
+CheckPlayerDead_C.Default=True
+CheckTargetDead_C.Description=True
+CheckTargetDead_C.Service=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
 /Game/AIAgent/TargetInterface.TargetInterface=0
-/Game/AIAgent/ProtoAI.ProtoAI=0
+/Game/AIAgent/ProtoAI.ProtoAI=1
 /Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
 /Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=0
 /Game/Materials/BlueGreen.BlueGreen=0
@@ -2187,9 +2202,9 @@ WorldSettings.Broadphase=True
 /Game/Geometry/Meshes/Grass.Grass=0
 /Game/TopDownBP/Blueprints/I_Detect.I_Detect=1
 /Game/TopDownBP/Blueprints/TopDownController.TopDownController=1
-/Game/TopDownBP/Interfaces/PlayerInt.PlayerInt=1
+/Game/TopDownBP/Interfaces/PlayerInt.PlayerInt=0
 /Game/TopDownBP/Blueprints/PlayerController.PlayerController=1
-/Game/AIAgent/ProtoTree.ProtoTree=0
+/Game/AIAgent/ProtoTree.ProtoTree=1
 /Game/AIAgent/MOveToTarget.MoveToTarget=0
 /Game/AIAgent/Perception.Perception=0
 /Game/AIAgent/MoveToPlayer.MoveToPlayer=0
@@ -2214,6 +2229,10 @@ WorldSettings.Broadphase=True
 /Game/GW000979/TestPawn3.TestPawn3=1
 /Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop=1
 /Game/AIAgent/I_Damage.I_Damage=0
+/Game/AIAgent/AttackPlayer.AttackPlayer=0
+/Game/AIAgent/CheckPlayerDead.CheckPlayerDead=0
+/Game/TopDownBP/Blueprints/I_PlayerStatus.I_PlayerStatus=0
+/Game/AIAgent/CheckTargetDead.CheckTargetDead=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2232,7 +2251,7 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-AIbot_C="\"Object.AttackSpeed\" \"Object.AttackSpeed\" "
+AIbot_C=
 Character=
 Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2277,6 +2296,12 @@ SpawnPoint_C=
 AttackPlayer_C=
 BTTask_BlueprintBase=
 BTTaskNode=
+TopDownGameMode_C="\"Object.PlayerStartRef\" \"Object.PlayerStartRef\" "
+GameModeBase="\"Object.PlayerStartRef\" \"Object.PlayerStartRef\" "
+Info=
+CheckPlayerDead_C=
+CheckTargetDead_C=
+MoveToPlayer_C=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3091,26 +3116,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem1=/Game/Levels/MechanicsLevel
-MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem3=/Game/SpawnActor/SpawnPoint
-MRUItem4=/Game/TopDownBP/Interactexample/Door
-MRUItem5=/Game/TopDownBP/Interactexample/Switch
+MRUItem0=/Game/AIAgent/Perception
+MRUItem1=/Game/AIAgent/MoveToPlayer
+MRUItem2=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem3=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem4=/Game/AIAgent/BTService_BlueprintBase_New
+MRUItem5=/Game/AIAgent/CheckPlayerDead_New
 MRUItem6=/Game/AIAgent/AttackPlayer
-MRUItem7=/Game/AIAgent/ProtoTree
-MRUItem8=/Game/AIAgent/Proto_controller
+MRUItem7=/Game/AIAgent/BTTask_BlueprintBase_New
+MRUItem8=/Game/AIAgent/ProtoTree
 MRUItem9=/Game/AIAgent/AIbot
-MRUItem10=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
-MRUItem11=/Game/AIAgent/I_Damage
-MRUItem12=/Game/AIAgent/TargetInterface
-MRUItem13=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem14=/Game/GW000979/DataStruct/BaseWeapon
-MRUItem15=/Game/GW000979/DataStruct/TargetDummy/TestDrop
-MRUItem16=/Game/GW000979/DataStruct/Weapon_Struct
-MRUItem17=/Game/GW000979/DataStruct/WeaponDataTable
-MRUItem18=/Game/Chloe/UI/HUD_Proto
-MRUItem19=/Game/Levels/TerrainMap
+MRUItem10=/Game/Levels/MechanicsLevel
+MRUItem11=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem12=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem13=/Game/SpawnActor/SpawnPoint
+MRUItem14=/Game/TopDownBP/Interactexample/Door
+MRUItem15=/Game/TopDownBP/Interactexample/Switch
+MRUItem16=/Game/AIAgent/Proto_controller
+MRUItem17=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
+MRUItem18=/Game/AIAgent/I_Damage
+MRUItem19=/Game/AIAgent/TargetInterface
 
 [WidgetTemplatesExpanded]
 Extra=False
