--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -219,7 +219,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/GW000979
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
 LastLevel=/Game/Levels/MechanicsLevel
@@ -2247,12 +2247,12 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
-SphereComponent=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -3122,10 +3122,10 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GW000979/BasicTeleporter/Teleport
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem2=/Game/Levels/MechanicsLevel
-MRUItem3=/Game/SpawnActor/SpawnPoint
+MRUItem0=/Game/SpawnActor/SpawnPoint
+MRUItem1=/Game/Levels/MechanicsLevel
+MRUItem2=/Game/GW000979/BasicTeleporter/Teleport
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownGameMode
 MRUItem4=/Game/TopDownBP/Interactexample/Door
 MRUItem5=/Game/TopDownBP/Interactexample/Switch
 MRUItem6=/Game/AIAgent/AttackPlayer
