--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -219,14 +219,15 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
 LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/SpawnActor/SpawnPoint.SpawnPoint
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
+OpenAssetsAtExit=/Game/AIAgent/AIbot.AIbot
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2259,7 +2260,7 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-AIbot_C="\"Object.AttackSpeed\" \"Object.AttackSpeed\" "
+AIbot_C=
 Character=
 Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2332,7 +2333,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3122,17 +3123,17 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SpawnActor/SpawnPoint
-MRUItem1=/Game/Levels/MechanicsLevel
-MRUItem2=/Game/GW000979/BasicTeleporter/Teleport
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem4=/Game/TopDownBP/Interactexample/Door
-MRUItem5=/Game/TopDownBP/Interactexample/Switch
-MRUItem6=/Game/AIAgent/AttackPlayer
-MRUItem7=/Game/AIAgent/ProtoTree
-MRUItem8=/Game/AIAgent/Proto_controller
-MRUItem9=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem10=/Game/AIAgent/AIbot
+MRUItem0=/Game/AIAgent/AIbot
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem2=/Game/Levels/MechanicsLevel
+MRUItem3=/Game/SpawnActor/SpawnPoint
+MRUItem4=/Game/GW000979/BasicTeleporter/Teleport
+MRUItem5=/Game/TopDownBP/Interactexample/Door
+MRUItem6=/Game/TopDownBP/Interactexample/Switch
+MRUItem7=/Game/AIAgent/AttackPlayer
+MRUItem8=/Game/AIAgent/ProtoTree
+MRUItem9=/Game/AIAgent/Proto_controller
+MRUItem10=/Game/TopDownBP/Blueprints/TopDownCharacter
 MRUItem11=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
 MRUItem12=/Game/AIAgent/I_Damage
 MRUItem13=/Game/AIAgent/TargetInterface
