Item Drop System Added

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -175,15 +175,15 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
-StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-BoolProperty=
+StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 ArrayProperty=
 IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
-BaseWeapon_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+BaseWeapon_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 UserDefinedStruct=
 BoxComponent=BoxComponent.Collision.Collision,
-TargetDummy_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+TargetDummy_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 NameProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 SpawnPoint_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 AttackPlayer_C=
@@ -196,6 +196,9 @@ MagicLeapSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.A
 TeleportOut_C=
 Teleport_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 TextProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+Weapon Set Up=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+BasePickup_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+Drop Item=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -219,13 +222,19 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/b024899h/Particle_Effects/Loot_Beams/2_Blue_Uncommon/Materials
+ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/GW000979/DataStruct/WeaponDataTable.WeaponDataTable
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BasePickup.BasePickup
+OpenAssetsAtExit=/Game/GW000979/DataStruct/TestItemTable.TestItemTable
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/c024816h/PickUpInterface.PickUpInterface
+OpenAssetsAtExit=/Game/AIAgent/AIbot.AIbot
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2193,6 +2202,55 @@ TextRenderComponent.Cooking=True
 TextRenderComponent.Events=True
 TextProperty.Variable=True
 TextProperty.DefaultValueCategory=True
+ItemStruct.None=True
+BasePickup_C.Tick=True
+BasePickup_C.Rendering=True
+BasePickup_C.Replication=True
+BasePickup_C.Input=True
+BasePickup_C.Actor=True
+BasePickup_C.TransformCommon=True
+BasePickup_C.Default=True
+REINST_AIbot_C_538.Variable=True
+REINST_AIbot_C_538.TransformCommon=True
+REINST_AIbot_C_538.Sockets=True
+REINST_AIbot_C_538.Shape=True
+REINST_AIbot_C_538.Navigation=True
+REINST_AIbot_C_538.Rendering=True
+REINST_AIbot_C_538.Physics=True
+REINST_AIbot_C_538.Collision=True
+REINST_AIbot_C_538.Tags=True
+REINST_AIbot_C_538.ComponentReplication=True
+REINST_AIbot_C_538.Cooking=True
+REINST_AIbot_C_538.Events=True
+REINST_AIbot_C_556.Variable=True
+REINST_AIbot_C_556.TransformCommon=True
+REINST_AIbot_C_556.Sockets=True
+REINST_AIbot_C_556.Animation=True
+REINST_AIbot_C_556.Mesh=True
+REINST_AIbot_C_556.Materials=True
+REINST_AIbot_C_556.Clothing=True
+REINST_AIbot_C_556.ClothingSimulation=True
+REINST_AIbot_C_556.Physics=True
+REINST_AIbot_C_556.Collision=True
+REINST_AIbot_C_556.Lighting=True
+REINST_AIbot_C_556.Rendering=True
+REINST_AIbot_C_556.Tags=True
+REINST_AIbot_C_556.ComponentReplication=True
+REINST_AIbot_C_556.Activation=True
+REINST_AIbot_C_556.Cooking=True
+REINST_AIbot_C_556.Events=True
+REINST_AIbot_C_562.Variable=True
+REINST_AIbot_C_562.TransformCommon=True
+REINST_AIbot_C_562.Sockets=True
+REINST_AIbot_C_562.Shape=True
+REINST_AIbot_C_562.Navigation=True
+REINST_AIbot_C_562.Rendering=True
+REINST_AIbot_C_562.Physics=True
+REINST_AIbot_C_562.Collision=True
+REINST_AIbot_C_562.Tags=True
+REINST_AIbot_C_562.ComponentReplication=True
+REINST_AIbot_C_562.Cooking=True
+REINST_AIbot_C_562.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2240,6 +2298,9 @@ TextProperty.DefaultValueCategory=True
 /Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop=1
 /Game/AIAgent/I_Damage.I_Damage=0
 /Game/GW000979/BasicTeleporter/Teleport.Teleport=1
+/Game/GW000979/DataStruct/ItemStruct.ItemStruct=0
+/Game/GW000979/DataStruct/TestItemTable.TestItemTable=1
+/Game/GW000979/DataStruct/ItemEnum.ItemEnum=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2258,9 +2319,9 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-AIbot_C=
-Character=
-Pawn=
+AIbot_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C=
@@ -2293,12 +2354,12 @@ REINST_TestPawn2_C_298="\"Object.Character.CharacterMovement.Object.Character Mo
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[15]\" "
 BaseWeapon_C=
 TestPawn3_C=
-StaticMeshComponent=
-MeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 TopDownCharacterTest_C=
 ShaneToyeSprintTest_C=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-TargetDummy_C=
+TargetDummy_C="\"Object.Drop Chance\" \"Object.Drop Chance\" "
 SpawnPoint_C=
 AttackPlayer_C=
 BTTask_BlueprintBase=
@@ -2306,6 +2367,13 @@ BTTaskNode=
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
+Weapon Set Up="\"Struct.MaxRow\" "
+BasePickup_C=
+Drop Item="\"Struct.Drop Chance\" "
+REINST_AIbot_C_538="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+REINST_AIbot_C_556="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+REINST_AIbot_C_562="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+REINST_AIbot_C_568="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2331,7 +2399,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3044,13 +3112,14 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/GW000979/DataStruct/BasePickup.BasePickup;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/Teleport.Teleport;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/TeleportOut.TeleportOut;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
@@ -3070,7 +3139,6 @@ RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
 RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/Geometry/Meshes/GrassMesh.GrassMesh;
-RecentlyPlaced=/Game/Geometry/Meshes/Grass.Grass;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3121,26 +3189,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/AIbot
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem2=/Game/Levels/MechanicsLevel
-MRUItem3=/Game/SpawnActor/SpawnPoint
-MRUItem4=/Game/GW000979/BasicTeleporter/Teleport
-MRUItem5=/Game/TopDownBP/Interactexample/Door
-MRUItem6=/Game/TopDownBP/Interactexample/Switch
-MRUItem7=/Game/AIAgent/AttackPlayer
-MRUItem8=/Game/AIAgent/ProtoTree
-MRUItem9=/Game/AIAgent/Proto_controller
-MRUItem10=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem11=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
-MRUItem12=/Game/AIAgent/I_Damage
-MRUItem13=/Game/AIAgent/TargetInterface
-MRUItem14=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem15=/Game/GW000979/DataStruct/BaseWeapon
-MRUItem16=/Game/GW000979/DataStruct/TargetDummy/TestDrop
-MRUItem17=/Game/GW000979/DataStruct/Weapon_Struct
-MRUItem18=/Game/GW000979/DataStruct/WeaponDataTable
-MRUItem19=/Game/Chloe/UI/HUD_Proto
+MRUItem0=/Game/GW000979/DataStruct/BaseWeapon
+MRUItem1=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
+MRUItem2=/Game/AIAgent/AIbot
+MRUItem3=/Game/Levels/MechanicsLevel
+MRUItem4=/Game/c024816h/PickUpInterface
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem6=/Game/GW000979/DataStruct/ItemStruct
+MRUItem7=/Game/GW000979/DataStruct/TestItemTable
+MRUItem8=/Game/GW000979/DataStruct/BasePickup
+MRUItem9=/Game/GW000979/DataStruct/ItemEnum
+MRUItem10=/Game/GW000979/DataStruct/Weapon_Struct
+MRUItem11=/Game/GW000979/DataStruct/WeaponDataTable
+MRUItem12=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem13=/Game/SpawnActor/SpawnPoint
+MRUItem14=/Game/GW000979/BasicTeleporter/Teleport
+MRUItem15=/Game/TopDownBP/Interactexample/Door
+MRUItem16=/Game/TopDownBP/Interactexample/Switch
+MRUItem17=/Game/AIAgent/AttackPlayer
+MRUItem18=/Game/AIAgent/ProtoTree
+MRUItem19=/Game/AIAgent/Proto_controller
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -3167,5 +3235,6 @@ CoordSystem=1
 
 [SuppressableDialogs]
 ExtrudeCoordsWarning=False
+DeleteVariableInUse_Warning=False
 
 
